Added youtube social button
Signed-off-by: Dimitris Zlatanidis <d.zlatanidis@gmail.com>

--- a/pelican-theme-jesuislibre/templates/base.html
+++ b/pelican-theme-jesuislibre/templates/base.html
@@ -71,8 +71,8 @@
             <a alt="twitter" href="{{ link }}"><img src="{{ SITEURL }}/theme/button/badge_twitter.png" alt="twitter button" /></a>
             {% endif %}
 
-            {% if name == "google+" %}
-            <a alt="Google +" rel="author" href="{{ link }}"><img src="{{ SITEURL }}/theme/button/badge_google+.png" alt="google + button" /></a>
+            {% if name == "youtube" %}
+            <a alt="youtube" rel="author" href="{{ link }}"><img src="{{ SITEURL }}/theme/button/badge_youtube.png" alt="youtube + button" /></a>
             {% endif %}
 
             {% if name == "blog" %}
