--- a/pelican-theme-jesuislibre/static/css/main.css
+++ b/pelican-theme-jesuislibre/static/css/main.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Linden Hill', Georgia, serif;
+    font-family: 'Ma Shan Zheng', Georgia, serif;
     font-size: 19px;
 }
 
