--- a/pelican-theme-jesuislibre/templates/base.html
+++ b/pelican-theme-jesuislibre/templates/base.html
@@ -17,6 +17,7 @@
 
         <!-- Style -->
         <link href="https://fonts.googleapis.com/css?family=Linden+Hill:400,400italic" rel="stylesheet" type="text/css" />
+		<link href="https://fonts.googleapis.com/css?family=Ma+Shan+Zheng&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css" />
         <link rel="shortcut icon" href="{{ SITEURL }}/theme/favicon.ico" />
 
