--- a/pelican-theme-jesuislibre/templates/base.html
+++ b/pelican-theme-jesuislibre/templates/base.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="{{ DEFAULT_LANG }}">
     <head>
-        <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
+		<!-- <title>{% block title %}{{ SITENAME }}{% endblock title %}</title> -->
+		<title> {% block title %} Slpkg - Slackware Linux Package Manager {% endblock title %} </title>
 
         <!-- meta -->
         <meta charset="utf-8" />
