--- a/pelican-theme-jesuislibre/templates/base.html
+++ b/pelican-theme-jesuislibre/templates/base.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="{{ DEFAULT_LANG }}">
     <head>
-		<!-- <title>{% block title %}{{ SITENAME }}{% endblock title %}</title> -->
-    <title> {% block title %} Slpkg - Slackware Linux Package Manager {% endblock title %} </title>
+		<title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
         <!-- meta -->
         <meta charset="utf-8" />
         <meta name="author" content="{{ AUTHOR }}" />
